Thu Jan 24 13:46:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm:
          The build order is stored in an eclipse file, generate this
          file so that we can control the build order easily. By
          placing this file in the following workspace directory
          .metadata\.plugins\org.eclipse.core.runtime\.settings

Thu Jan 24 12:49:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Corrected order of the generated libs

Wed Jan 23 14:58:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Added support for custom only projects

Wed Jan 23 14:15:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26.mpd:
          Use project_name, that is also set for projects that only generate
          IDL files

Wed Jan 23 08:45:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WRMAKEFILEProjectCreator.pm:
          Also the wrmakefile requires paths to use forward slashes

        * templates/wb26wrmakefile.mpd:
          Go to the real directory where the commands should be started.
          The workbench sets a subdirectory as current directory

Tue Jan 22 20:26:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Generate custom build commands which are for example used for
          triggering the IDL compiler

Tue Jan 22 19:47:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Generate a post build command that copies the libraries and
          executables to the location specified through the mpc file

Tue Jan 22 19:34:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26.mpd:
          Also generate inline, header, and template files into the project

Tue Jan 22 08:48:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
