@@ -39,7 +39,7 @@ sub pre_workspace {
             '#', $crlf,
             '# This file was generated by MPC.  Any changes made directly to', $crlf,
             '# this file will be lost the next time it is generated.', $crlf,
-            '# This file should be placed in the \.metadata\.plugins\org.eclipse.core.runtime\.settings directory', $crlf,
+            '# This file should be placed in the .metadata\.plugins\org.eclipse.core.runtime\.settings directory', $crlf,
             '#', $crlf,
             '# MPC Command:', $crlf,
             "# $0 @ARGV", $crlf,
